FIx the packetmanager service
Signed-off-by: Dhanendra Sahu <dhanendra.tech@gmail.com>